Add initial scaffolding for database support.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 # application.properties
 server.name=MinimalSpring
 server.port=8089
+
+db.type=mysql           # or "mongodb"
+db.host=localhost
+db.port=3306            # 27017 for MongoDB
+db.name=myapp
+db.username=root
+db.password=secret
+
+# Optional Mongo URI override
+# db.uri=mongodb://localhost:27017
