--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,13 @@ server.port=8089
 db.type=mysql           # or "mongodb"
 db.host=localhost
 db.port=3306            # 27017 for MongoDB
-db.name=myapp
+db.name=sakila
 db.username=root
-db.password=secret
+db.password=Basement99!
+
+database.url=jdbc:mysql://localhost:3306/sakila
+database.username=root
+database.password=Basement99!
 
 # Optional Mongo URI override
 # db.uri=mongodb://localhost:27017
