Begin implementing MongoDB/JPA support.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ database.password=Basement99!
 
 # Optional Mongo URI override
 # db.uri=mongodb://localhost:27017
+
+mongodb.uri=mongodb://localhost:27017
+mongodb.database=myapp
