--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.11.0</version> <!-- or latest stable -->
+        </dependency>
+
     </dependencies>
 
     <build>
