Added basic MongoDB client support.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,7 @@ database.password=Basement99!
 # db.uri=mongodb://localhost:27017
 
 mongodb.uri=mongodb://localhost:27017
-mongodb.database=myapp
+mongodb.database=springmimic
+
+mongo.uri=mongodb://localhost:27017
+mongo.database=mydb
