Improved configuration and context handling. Added more tests.

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,5 +2,11 @@ test.key=hello
 test.port=1234
 test.keynum=99
 
+db.type=mysql           # or "mongodb"
+
 mongodb.uri=mongodb://localhost:27017
 mongodb.database=springmimic
+
+database.url=jdbc:mysql://localhost:3306/sakila
+database.username=root
+database.password=Basement99!
