Allow easier switching between database types, improve configuration and dependency injection handling, tidy up code a little.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.name=MinimalSpring
 server.port=8089
 
 db.type=mysql           # or "mongodb"
+#db.type=mongodb
+
 database.url=jdbc:mysql://localhost:3306/sakila
 database.username=root
 database.password=Basement99!
