--- a/src/test/resources/application-mongodb.properties
+++ b/src/test/resources/application-mongodb.properties
@@ -2,8 +2,8 @@ test.key=hello
 test.port=1234
 test.keynum=99
 
-db.type=mysql           # or "mongodb"
-#db.type=mongodb
+#db.type=mysql           # or "mongodb"
+db.type=mongodb
 
 mongodb.uri=mongodb://localhost:27017
 mongodb.database=springmimic
