Added basic HTML page serving.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,9 @@ mongodb.database=springmimic
 mongo.uri=mongodb://localhost:27017
 mongo.database=mydb
 
-log.level=INFO
+#log.level=INFO
+logging.level=DEBUG
+logging.output=file   # or 'console' or 'both'
+logging.file=logs/custom.log
+
+static.path=public
