--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -11,3 +11,5 @@ mongodb.database=springmimic
 database.url=jdbc:mysql://localhost:3306/sakila
 database.username=root
 database.password=Basement99!
+
+static.path=public
