--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
             <version>4.11.0</version> <!-- or latest stable -->
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.3.232</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- SLF4J API -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -81,6 +88,7 @@
             <artifactId>logback-classic</artifactId>
             <version>1.4.14</version>
         </dependency>
+
     </dependencies>
 
     <build>
