--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,9 @@
 server.name=MinimalSpring
 server.port=8089
 
-db.type=mysql           # or "mongodb"
+#db.type=mysql           # or "mongodb"
 #db.type=mongodb
+db.type=h2
 
 database.url=jdbc:mysql://localhost:3306/sakila
 database.username=root
@@ -17,6 +18,10 @@ mongodb.database=springmimic
 
 mongo.uri=mongodb://localhost:27017
 mongo.database=mydb
+
+h2.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+h2.username=sa
+h2.password=password
 
 #log.level=INFO
 logging.level=DEBUG
