--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 server.name=MinimalSpring
 server.port=8089
 
-#db.type=mysql           # or "mongodb"
+db.type=mysql           # or "mongodb"
 #db.type=mongodb
-db.type=h2
+#db.type=h2
 
 database.url=jdbc:mysql://localhost:3306/sakila
 database.username=root
