--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.iimmersao.springmimic</groupId>
-    <artifactId>SpringMimic</artifactId>
+    <groupId>com.iimmersao</groupId>
+    <artifactId>springmimic</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>Spring Mimic</name>
+    <description>Lightweight Java Web Framework mimicking Spring Boot</description>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!--
         <start-class>com.iimmersao.springmimic.Main</start-class>
+        -->
     </properties>
 
     <dependencies>
@@ -100,11 +105,13 @@
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
+                    <!--
                     <archive>
                         <manifest>
-                            <mainClass>com.iimmersao.springmimic.Main</mainClass> <!-- or com.example.Main -->
+                            <mainClass>com.iimmersao.springmimic.Main</mainClass>
                         </manifest>
                     </archive>
+                    -->
                 </configuration>
                 <executions>
                     <execution>
@@ -133,6 +140,26 @@
                 </configuration>
             </plugin>
 
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
