Start updating client/server functionality to support headers and responses better.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,13 @@ logging.output=file   # or 'console' or 'both'
 logging.file=logs/custom.log
 
 static.path=public
+
+# restclient.properties
+restclient.connectTimeoutMillis=3000
+restclient.readTimeoutMillis=6000
+restclient.maxRetries=2
+restclient.retryDelayMillis=1000
+
+restclient.defaultHeaders.Accept=application/json
+restclient.defaultHeaders.Content-Type=application/json
+# Authorization header NOT included here!
