--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
             <!--
             -->
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.19.0</version>
+        </dependency>
 
         <dependency>
             <groupId>io.github.classgraph</groupId>
