Added basic YAML config support.

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,7 +2,8 @@ test.key=hello
 test.port=1234
 test.keynum=99
 
-db.type=mysql           # or "mongodb"
+db.type=h2           # should not get picked up, as yaml config should override
+#db.type=mysql           # or "mongodb"
 #db.type=mongodb
 
 mongodb.uri=mongodb://localhost:27017
